# collectives

./: .gitignore  AGENTS.md  AUTH0.md  CODING  CODING.md  Dockerfile  LICENSE  README.md  README.txt  cli_test_payline.py  config.py  logging.cfg  pylintrc  pyproject.toml  qdz  requirement.txt  requirements-tools.txt  requirements.txt  run-test.py  run.py  run_ci_jobs_locally.sh  test_payline.py  tests.py  wsgi.py
.github/: dependabot.yml
.github/linters/: .htmlhintrc  .stylelintrc.json
.github/workflows/: build_docker.yml  db_migrations.yml  push.yml  push_lint.yml  push_test.yml  sphinx-build.yml
collectives/: __init__.py  administration.py  api.py  auth.py  configuration.yaml  context_processor.py  email_templates.py  event.py  export.py  extranet.py  forms.py  helpers.py  models.py  new_event_notifications.py  views.py
collectives/api/: __init__.py  admin.py  auth0_webhooks.py  autocomplete_reservation.py  autocomplete_user.py  common.py  configuration.py  diploma.py  equipment.py  event.py  models.py  payment.py  reservation.py  schemas.py  upload.py  userevent.py
collectives/data/: crawler-user-agents.json
collectives/forms/: __init__.py  activity_type.py  auth.py  badge.py  configuration.py  csv.py  diploma.py  equipment.py  event.py  order.py  payment.py  question.py  reservation.py  stats.py  upload.py  user.py  user_group.py  utils.py  validators.py
collectives/models/: __init__.py  activity_type.py  activitytype.py  auth.py  badge.py  configuration.py  diploma.py  equipment.py  equipmentModel.py  equipmentType.py  event.py  event_tag.py  eventtype.py  globals.py  new_event_notification.py  payment.py  question.py  registration.py  request.py  reservation.py  role.py  upload.py  user.py  user_followed_activity.py  user_group.py  utils.py
collectives/routes/: __init__.py  activity_supervison.py  administration.py  auth.py  diploma.py  equipment.py  event.py  payment.py  populate_db_equipment_reservation.py  profile.py  question.py  reservation.py  root.py  technician.py  views.py
collectives/static/: all.css  manifest.json
collectives/templates/: activity.html  administration.html  attestation_benevole.html  base.html  basicform.html  confidentiality_agreement.html  contact_link.html  editactivity.html  editevent.html  equipment.html  equipment_stock.html  equipment_type.html  error.html  event.html  exported_event.xlsx  import_csv.html  index.html  leader_profile.html  leaders_list.html  legal.html  legal_text.html  login.html  macros.html  manageuser.html  print_event.html  profile.html  trainees.html  user_badge_renew.html  user_badges.html  user_roles.html  usericon.html
collectives/utils/: __init__.py  access.py  badges.py  certificate.py  config_sql.py  crawlers.py  csv.py  error.py  event.py  export.py  extranet.py  init.py  jinja.py  mail.py  misc.py  numbers.py  openpyxl.py  payline.py  payline.wsdl  payline_directpayment.wsdl  payline_directpayment_prod.wsdl  payline_prod.wsdl  payment.py  profile_token.py  rate_limit.py  render_markdown.py  statistics.py  stats.py  time.py  url.py
deployment/docker/: entrypoint.sh  logging.cfg
deployment/k8s/: .gitignore  collectives.example.yaml
deployment/systemd/: collectives.service
doc/: make.bat  make_html.bat
doc/cron/: collectives-notifications.cron
doc/source/: api.rst  architecture.rst  collectives.rst  conf.py  configuration.rst  deployment.rst  docker.rst  event.rst  forms.rst  github_validation.rst  helpers.rst  howto.rst  html.rst  index.rst  models.rst  notifications_digest.rst  payment.rst  routes.rst  tests.rst  tests_autodoc.rst  user.rst  user_group.rst  utils.rst
docs/auth0/: DEPLOYMENT.md  FLOWS.md  README.md
etc/: __init__.py  cli_test_payline.py  simple_test_extranet.py  test_set.py
instance/: config.example.py  config.py
migrations/versions/: 0110110fa81e_add_configuration_item.py  01a7e5bb3506_add_equipment_roles.py  01d8429756a2_add_event_tags.py  01e5792cdfac_add_registration_time.py  01e5792cdfac_add_unjustified_absence_badges_and_statuses.py  03efbbcc54de_add_parent_event_to_payments.py  0739a284a59f_add_equipment.py  0b4c12908e01_add_reservation.py  0d576470d1ed_add_uploaded_files_activity.py  1006bccb75da_fix_group_event_fk.py  15f3ec45ac9b_add_new_badge_types.py  19aba10b42ed_.py  1b9af0580e8a_add_payments_terms_version.py  209bf2e32aa1_add_equipment.py  20e75469b22b_.py  28f945d84529_add_equipment.py  2a982c3401c1_add_equipments_classes.py  2ae68816e937_add_attendance_on_event_type.py  2f4d0f7a9c3b_add_user_new_event_notifications.py  341f247b06cf_added_equipment_type_img.py  34af90a8159f_add_signed_legal_text_version.py  3529f70521c4_add_event_parent_child.py  362909e71290_add_refund_time_and_metadata.py  3675c653f1fa_.py  3ce1483e95a5_main_leader_id.py  3d974e3ecddf_add_event_type.py  450db2068479_add_gender_to_user.py  46e84942ea83_add_badge_condition.py  4a5c66ab7eaa_add_badges_table.py  4a8c2871e259_add_questions.py  4d25910e8aa5_add_auth0_id_to_user_model.py  50b732cde535_add_show_all_badges.py  527d9aca94fa_add_eventtype_terms.py  564b1ed538b2_payments_models.py  58444ee06c99_migration_to_camelcase.py  5a9ba75de4d1_add_item_price_conditions.py  604ff8589a3a_add_user_groups.py  60ac67f0bc8a_add_failed_to_conf_tokens.py  63491cbc6bb3_create_services.py  682dca598913_add_equipment.py  (+68 more)
plans/: followed-activities-notifications.md  followed-activities-notifications_public_release.md
tests/: TODO  __init__.py  conftest.py  test_admin.py  test_api.py  test_auth.py  test_config.py  test_event.py  test_extranet.py  test_extranet_rsync.py  test_leader_privacy.py  test_new_event_notifications.py  test_payments.py  test_profile.py  test_question.py  test_stats.py  utils.py
tests/activity/: test_activity_supervision.py  test_competency_badge.py  test_csv_import.py  test_volunteers.py
tests/admin/: test_admin.py  test_admin_api.py  test_admin_badges.py  test_config.py  test_technician.py
tests/api/: test_auth0_webhooks.py
tests/assets/: config.test.py  configuration.test.yaml
tests/auth/: test_auth.py  test_auth0.py  test_extranet_signup.py  (+1 more)
(+357 files in other folders)
