[tool.poetry]
name = "collectives"
version = "0.1.0"
description = ""
authors = ["Aurélien Rayer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
flask-login = "^0.6.3"
cssmin = "^0.2.0"
flask = "^3.0.0"
markupsafe = "^2.1.3"
werkzeug = "^3.0.1"
flask-assets = "^2.1.0"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
libsass = "^0.22.0"
flask-wtf = "^1.2.1"
wtforms-alchemy = "^0.18.0"
flask-migrate = "^4.0.5"
marshmallow-sqlalchemy = "^0.29.0"
cmarkgfm = "^2022.10.27"
pysimplesoap = {git = "https://github.com/pysimplesoap/pysimplesoap.git"}
pymysql = "^1.1.0"
dkimpy = "^1.1.5"
email-validator = "^2.1.0.post1"
openpyxl = "^3.1.2"
babel = "^2.13.1"
python-dateutil = "^2.8.2"
phonenumbers = "^8.13.25"
zeep = "^4.2.1"
pyyaml = "^6.0.1"
flask-images = {git = "https://github.com/Club-Alpin-Annecy/Flask-Images"}
flask-marshmallow = {git = "https://github.com/Club-Alpin-Annecy/flask-marshmallow.git"}
wtforms-components = {git = "https://github.com/Club-Alpin-Annecy/wtforms-components.git"}
flask-testing = "^0.8.1"
pylint-quotes = "^0.2.3"
pylint-flask-sqlalchemy = "^0.2.0"

black = "^23.11.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
beautifulsoup4 = "^4.12.2"
sphinx = "6.1.3"
sphinx-book-theme = "^1.0.1"
docstr-coverage = "^2.3.0"
flask-uploads = {git = "https://github.com/maxcountryman/flask-uploads.git"}
itsdangerous = "^2.1.2"
pillow = "9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
