[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["collectives"]

[tool.uv.sources]
flask-login = { git = "https://github.com/maxcountryman/flask-login.git", rev = "26d12eaa99a18fc91e662ef0c8466245b8865c1c" }
flask-uploads = { git = "https://github.com/maxcountryman/flask-uploads.git", rev = "f66d7dc93e684fa0a3a4350a38e41ae00483a796" }
pysimplesoap = { git = "https://github.com/pysimplesoap/pysimplesoap.git", rev = "ad03a21cafab982eed321553c4bfcda1755182eb" }
flask-images = { git = "https://github.com/Club-Alpin-Annecy/Flask-Images", rev = "master" }
docstr-coverage = { git = "https://github.com/HunterMcGushion/docstr_coverage.git" }

[project]
name = "collectives"
version = "0.1.0"
description = "Evenement management system for outdoor activities"
authors = [{name = "Caf Annecy", email = "support-collectives@cafannecy.fr"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cssmin",
    "itsdangerous",
    "markupsafe",
    "flask",
    "Werkzeug",
    "flask-assets",
    "sqlalchemy",
    "flask_sqlalchemy",
    "sqlalchemy-utils",
    "passlib",
    "libsass",
    "flask-wtf",
    "WTForms-Alchemy",
    "flask-migrate",
    "marshmallow-sqlalchemy",
    "flask-marshmallow",
    "cmarkgfm",
    "pymysql",
    "dkimpy",
    "email_validator",
    "openpyxl",
    "babel",
    "python-dateutil",
    "phonenumbers",
    "zeep",
    "Pillow",
    "PyYAML",
    "argon2-cffi",
    "flask-login",
    "flask-uploads",
    "pysimplesoap",
    "flask-images",
]

[project.optional-dependencies]
dev = [
    "flask-testing",
    "pylint-quotes",
    "pylint-flask-sqlalchemy",
    "black",
    "pytest",
    "pytest-cov",
    "beautifulsoup4",
    "Sphinx==6.1.3",
    "sphinx-book-theme",
    "docstr-coverage",
]
